# py_agata

./: .gitignore  .travis.yml  README.md  agata.py  pyproject.toml  requirements.txt  try_agata.py
.circleci/: config.yml
.github/workflows/: ci.yml  main.yml
example/data/: data.csv  dexcom_example.xlsx  eversense_example.xlsx  freestyle_libre_example.xlsx
py_agata/: py_agata.py
py_agata/error/: __init__.py
py_agata/error/tests/: test_clarke.py  test_cod.py  test_g_rmse.py  test_mard.py  test_rmse.py  test_time_delay.py
py_agata/glycemic_transformation/: __init__.py
py_agata/glycemic_transformation/tests/: test_igc.py  (+7 more)
py_agata/input_validator/: __init__.py
py_agata/inspection/: __init__.py
py_agata/processing/: __init__.py
py_agata/risk/: __init__.py
py_agata/tests/: test_agata.py  test_analyze_glucose_profile.py  test_analyze_one_arm.py  test_compare_two_arms.py
py_agata/time_in_ranges/: __init__.py
py_agata/utils/: __init__.py
py_agata/variability/: __init__.py
risk/: __init__.py
risk/tests/: test_adrr.py  test_bgri.py  test_dynamic_risk.py  test_gri.py  test_hbgi.py  test_lbgi.py
tests/: test_agata.py  test_analyze_glucose_profile.py
time_in_ranges/: __init__.py
time_in_ranges/tests/: test_time_in_given_above_range.py  test_time_in_given_below_range.py  test_time_in_given_range.py  test_time_in_hyperglycemia.py  test_time_in_hypoglycemia.py  test_time_in_l1_hyperglycemia.py  test_time_in_l1_hypoglycemia.py  test_time_in_l2_hyperglycemia.py  test_time_in_l2_hypoglycemia.py  test_time_in_target.py  test_time_in_tight_target.py
(+69 files in other folders)
