[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_agata"
version = "0.0.4"
authors = [
  { name="Giacomo Cappon", email="cappongiacomo@gmail.com" },
]
description = "AGATA (Automated Glucose dATa Analysis): a toolbox to analyse glucose data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.urls]
"Homepage" = "https://github.com/gcappon/py_agata"
"Bug Tracker" = "https://github.com/gcappon/py_agata/issues"